<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/record_first_linear"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="10dp"
        android:background="@color/record_divided" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/myshop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/phone_left_text"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/user_phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/phone_demo_text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/right_arrow"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/record_divided" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="15dp"
        android:background="@color/record_divided" />

    <LinearLayout
        android:id="@+id/user_nick_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_nick_left_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/user_nick_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLength="20"
            android:maxLines="1"
            android:text="@string/user_nick_demo_text"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/record_divided" />

    <TextView
        android:id="@+id/user_post_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:drawableRight="@drawable/right_arrow"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:text="@string/user_post_left_text"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/record_divided" />

    <LinearLayout
        android:id="@+id/user_shop_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/user_shop_left_text"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/user_shop_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/user_shop_demo_text"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/right_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/record_divided" />

    <TextView
        android:id="@+id/about_us_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:drawableRight="@drawable/right_arrow"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:text="@string/about_us_text"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/record_divided" />

    <TextView
        android:id="@+id/feed_back_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableRight="@drawable/right_arrow"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:text="@string/feed_back_text"
        android:textColor="@android:color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/record_divided" />

    <Button
        android:id="@+id/cancel_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/canel_login_btn" />

</LinearLayout>