<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/version_ll"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/version_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_txt"
                android:textColor="@color/post_title"
                android:textSize="@dimen/tips_size" />

            <TextView
                android:id="@+id/current_version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textColor="@color/post_title"
                android:textSize="@dimen/tips_size" />
        </LinearLayout>

        <Button
            android:id="@+id/update_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/version_ll"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/scan_btn"
            android:text="@string/update_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/button_font_size" />

        <LinearLayout
            android:id="@+id/kb_card_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/call_us_txt"
                android:textColor="@color/author_txt"
                android:textSize="@dimen/target_size" />

            <TextView
                android:id="@+id/kb_card_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_horizontal"
                android:text="@string/kb_card_text"
                android:textColor="@color/kb_yellow"
                android:textSize="@dimen/tips_size" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/about_us_footer" />

</LinearLayout>