<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/layout_title_bar" />

    <EditText
        android:id="@+id/record_date_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:clickable="false"
        android:drawableRight="@drawable/date"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:text="@string/choice_date" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <com.koolbao.saler.widge.RecordEditText
            android:id="@+id/record_txt_tv"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/record_hint"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/char_warn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/record_txt_tv"
            android:layout_alignRight="@+id/record_txt_tv"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/char_warn"
            android:textColor="@android:color/black" />
    </RelativeLayout>

</LinearLayout>